<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/finished_trips"
        android:icon="@drawable/ic_car_24"
        android:title="@string/finished_trips" />
    <item
        android:id="@+id/balance"
        android:icon="@drawable/ic_money"
        android:title="@string/balance" />
    <item
        android:id="@+id/supporter"
        android:icon="@drawable/ic_support_agent_24"
        android:title="@string/supporter" />
    <item
        android:id="@+id/rating"
        android:icon="@drawable/ic_star_rate_24"
        android:title="@string/rating" />
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/log_out" />


</menu>