<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/_16sdp"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/_14ssp"
        android:ellipsize="end"
        android:gravity="start"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/fare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticketNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/seatsNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seats_num"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/ticketNum"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fare"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintTop_toBottomOf="@id/seatsNum"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/dark_gray"
        android:layout_marginHorizontal="@dimen/_24sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>