<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.tripGraph.RideLifecycleFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:text="@string/current_station"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/currentStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/navigationCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/stroke_background"
        android:elevation="8dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navigationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp">

            <TextView
                android:id="@+id/tV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/navigate_to"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/navigateTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tV" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="@id/navigateTo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/navigateTo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/confirmCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/stroke_background"
        android:elevation="8dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/navigationCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp">

            <TextView
                android:id="@+id/tV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/confirm_arrival"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/confirmTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/arrow2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tV2" />

            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="@id/confirmTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/confirmTv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/arrival_time_to_station"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmCard"
        />

    <TextView
        android:id="@+id/arrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterPassengersBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entering_passengers"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#2ECD70"
        app:layout_constraintTop_toBottomOf="@id/confirmCard"
        android:minHeight="@dimen/_56sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/exitingPassengersBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_56sdp"
        android:text="@string/exiting_passengers"
        android:backgroundTint="@color/g_red"
        app:layout_constraintTop_toBottomOf="@id/enterPassengersBtn"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_8sdp"
        />

    <include
        android:id="@+id/lastStationView"
        layout="@layout/last_station_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/enterPassengersBtn"
        app:layout_constraintTop_toTopOf="parent"
        />

    <include
        android:id="@+id/tripFinishView"
        layout="@layout/trip_finish_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/enterPassengersBtn"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>